--- a/index.html
+++ b/index.html
@@ -1,10 +1,161 @@
 <!DOCTYPE html>
-<html>
+
 <head>
-  <title></title>
+  <meta charset="utf-8">
+
+  <title>Just the Gist</title>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+  <style>
+    body {
+      background-image:;
+    }
+
+    li {
+      cursor: pointer;
+    }
+
+    .container { /* at top of page */
+  		max-width: 1000px;
+  		margin: 0 auto;
+		}
+
+		/* Header styles */
+		header {
+		  background-color: #1b5dce; /* blue banner at top */
+		  position: fixed;
+		  top: 0;
+		  left: 0;
+		  right: 0;
+		  text-align: center;
+		}
+
+		header h1 {
+		  color: #FFF; /* white text at top */
+		  padding: 10px 2%;
+		  margin: 0;
+		  display: inline-block;
+		}
+
+    .wrapper {
+      border: 1px solid #000;
+      display: inline-block;
+    }
+
+    input,
+    button {
+      background-color: transparent;
+      border: 0;
+    }
+
+    .center {
+      text-align: center;
+      border: 3px yellow;
+    }
+
+    .blue-text {
+      color: blue;
+    }
+
+    .image-centered {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      height: 375px;
+    }
+
+img    { height: 375px; margin:1px; display: block; margin-left: auto; margin-right: auto;}
+body   { background-color: ; } 
+/*span { color:black; font-size:18px; } */
+  </style>
+
 </head>
+
 <body>
 
-  <script type="text/javascript" src="app.js"></script>
+<!-- header section at top of page -->
+	<header>
+	  <section class="container" class="center">
+	    <h1 class="center">Just the Gist</h1>
+	  </section>
+	</header>
+
+
+
+<!-- text at the top of page -->
+<h1 class="center blue-text">Just the Gist</h1>
+<h3 class="center">Who has time for nuance, complexity, 
+ and information overload?
+<br>Just give me the gist!</h3>
+<br>
+
+<!-- search bar and button -->
+<form action="#" id="sub" class="center">
+  <div class="wrapper">
+  <input type="text" id="searchTerm" name="txt" placeholder="Search Term"/>
+  <input type="button" id="btnEnterSearchTerm" value="Go"/>
+  </div>
+</form>
+
+ <!-- placeholder image here of information overload -->
+<br>
+
+<!-- image search results-->
+<div id="results" class="image-centered">
+<img class="image-centered" src="information-overload.jpg" alt="info overload" style="">
+</div>
+
+
+ <!-- search results -->
+
+<h3 class="center">You searched for:
+  <span class="topic center blue-text"></span>
+</h3>
+
+
+ <!-- wikipedia search results-->
+
+<h3 class="center">Wikipedia results:
+    <div id="output" class="blue-text" placeholder="Search Term">
+    <span>
+    One, Two, Three
+    <br/>Four, Five, Six
+    <br/>Seven, Eight, Nine
+    </span>
+    </div>
+</h3>
+
+
+
+
+<!-- trying this too <<< -original code i found online
+<div class="container">
+  <h1>Wikipedia Search</h1>
+  <input id="searchTerm" name="search" placeholder="Search..">
+  <button id='search' type="button" class ="btn btn-primary">Submit</button>
+  <a href="https://en.wikipedia.org/wiki/Special:Random" class="btn btn-primary">Random</a>
+  <div id="output"></div>
+</div> -->
+
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+
+
+  <!-- Firebase CDN -->
+   <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+
+
+<!-- adding this lodash -->
+<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.js"></script> --> 
+
+<!-- js -->
+<script src="justTheGist.js"></script>
+
 </body>
+
 </html>
