--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body   { background-color: ; }
 <br>
 
 <!-- search bar and button -->
-<form action="#" id="sub" class="center" method="POST" onsubmit="return false"> <!-- onsubmit="return false" makes form not get submitted -->>
+<form action="#" id="sub" class="center" method="POST" onsubmit="return false"> <!-- onsubmit="return false" makes form not get submitted -->
   <div class="wrapper">
   <input type="text" id="searchTerm" name="txt" placeholder="Search Term"/>
   <input type="button" id="btnEnterSearchTerm" value="Go"/>
