--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     input,
     button {
       background-color: transparent;
-      border: 0;
+      border: solid;
+      border-width: 1px;
     }
 
     .center {
